[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scenes/main/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "TILEGAME 3D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Godot Edition"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ClassLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Class:"
horizontal_alignment = 1

[node name="ClassButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="WarriorBtn" type="Button" parent="VBoxContainer/ClassButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
text = "Warrior"

[node name="MageBtn" type="Button" parent="VBoxContainer/ClassButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
text = "Mage"

[node name="HunterBtn" type="Button" parent="VBoxContainer/ClassButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
text = "Hunter"

[node name="AdventurerBtn" type="Button" parent="VBoxContainer/ClassButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
text = "Adventurer"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ModeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Mode:"
horizontal_alignment = 1

[node name="ModeButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="AdventureBtn" type="Button" parent="VBoxContainer/ModeButtons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Adventure"

[node name="HordeBtn" type="Button" parent="VBoxContainer/ModeButtons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Horde"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "START GAME"
